2010-09-21  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* kruskal.tcl:      One-sided test according to Kruskal-Wallis
	* statistics.tcl:   Added test Kruskal-Wallis
	* statistics.man:   Describe Kruskal-Wallis
	* statistics.test:  Added simple test case
	* pkgIndex.tcl:     Bumped version to 0.7.0

2010-09-20  Lars Hellstr\"om  <lars_h@users.sourceforge.net>

	* numtheory.dtx:    New package math::numtheory (v1.0)
	* numtheory.man:    with command math::numtheory::isprime.
	* numtheory.stitch: See numtheory.dtx for all the gory
	* numtheory.tcl:    details of the implementation of
	* numtheory.test:   package and tests.
	* pkgIndex.tcl:

2010-08-22  Andreas Kupries  <andreask@activestate.com>
	* linalg.tcl: Corrected bug #3036124 (shape of U matrix)
	  - should probably include an extra command for
	  truncated output of S and V

2010-05-24  Andreas Kupries  <andreask@activestate.com>

	* geometry.man: A bit more commands, bumped to version 1.1.2.
	* geometry.tcl:
	* pkgIndex.tcl:

2010-04-06  Andreas Kupries  <andreask@activestate.com>

	* geometry.tcl (findLineIntersection): Fixed numerical
	* geometry.man: instability in the algorithm by replacing
	* geometry.test: it with Kevin's parametric code. Updated
	* pkgIndex.tcl: documentation, testsuite. Bumped to
	  version 1.1.1.

2010-04-05  Andreas Kupries  <andreask@activestate.com>

	* geometry.tcl: Extended API with a number of basic point
	* geometry.man: and vector operations (+, -, scale, ...).
	* geometry.test: Updated documentation, testsuite.
	* pkgIndex.tcl: Bumped to version 1.1.

2010-01-17  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* fuzzy.tcl: [Bug 2933130]. Fixed procedure tlt
	* fuzzy.test: [Bug 2933130]. Added test for this bug
	* pkgIndex.tcl: Version increased to 0.2.1

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	*

2009-12-04  Andreas Kupries  <andreask@activestate.com>
